# dash

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml  cleanup.yml  codeql-analysis.yml  codeql.yml
app/: Dockerfile  main.py  pyproject.toml  requirements.txt
app/assets/: manifest.json
app/src/: main.ts  style.css
app/static/: script.js  style.css
app/templates/: index.html
