[project]
name = "dash"
version = "1.10.0"
requires-python = ">=3.14"
dependencies = [
    "uvicorn~=0.41.0",
    "starlette~=0.52.1",
    "aiofiles~=25.1.0",
    "jinja2~=3.1.6",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "A",         # flake8-builtins
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "PIE",       # flake8-pie
    "T20",       # flake8-print (no stray prints)
    "T10",       # flake8-debugger (no breakpoints)
    "BLE",       # flake8-blind-except
    "LOG",       # flake8-logging
    "ISC",       # flake8-implicit-str-concat
    "FLY",       # flynt (f-string migration)
    "FURB",      # refurb (modernization)
    "RET",       # flake8-return (clean control flow)
    "N",         # pep8-naming
    "PGH",       # pygrep-hooks (precise suppressions)
    "RSE",       # flake8-raise (clean raise statements)
    "PTH",       # flake8-use-pathlib
]
ignore = [
    "SIM103",  # return condition directly
    "SIM108",  # ternary operator
]

[tool.ruff.format]
quote-style = "single"
